--- a/client/src/css/chatBubble.css
+++ b/client/src/css/chatBubble.css
@@ -4,7 +4,7 @@
     width: 90%;
     margin-left: auto;
     margin-right: auto;
-    height:60px;
+    min-height:60px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -39,7 +39,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 40px;
+    min-height: 40px;
     font-size: 16px;
     background-color: whitesmoke;
     border-radius: 100px;
